syntax = "proto3";

service RecordService {
  rpc GetRecord(GetRecordReq) returns (GetRecordRes) {}
}

message GetRecordReq {
  string id = 1 ;
}

message GetRecordRes {
  Record record = 1 ;
}

message Record {
  string id = 1;
  string name = 2;
}
